08-Security-Group.tf
# This file contains the security group configuration for the VPC.
  #PUBLIC SUBNET SECURITY GROUP
resource "aws_security_group" "Cloudqueror_SG" {
  name        = "my-sg"
  description = "Allow TLS, SSH, HTTP, and custom ports inbound traffic and all outbound traffic"
  vpc_id      = aws_vpc.Cloudqueror_VPC.id
  tags = {
    Name = "Cloudqueror-Security-Group"
  }

  ingress {
    description = "Allow HTTPSfrom anywhere"
    from_port   = 443
    to_port     = 443
    cidr_blocks = ["0.0.0.0/0"]
    protocol    = "tcp"
  }

  ingress {
    description = "Allow SSH from anywhere"
    from_port   = 22
    to_port     = 22
    cidr_blocks = ["0.0.0.0/0"]
    protocol    = "tcp"
  }

  ingress {
    description = "Allow HTTP from anywhere"
    from_port   = 80
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
    protocol    = "tcp"
  }

  ingress {
    description = "Allow custom port 8080 from anywhere"
    from_port   = 8080
    to_port     = 8080
    cidr_blocks = ["0.0.0.0/0"]
    protocol    = "tcp"
  }

  ingress {
    description = "Allow SonarQube custom port 9000 from anywhere"
    from_port   = 9000
    to_port     = 9000
    cidr_blocks = ["0.0.0.0/0"]
    protocol    = "tcp"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# RDS Security Group
# resource "aws_security_group" "rds_sg" {
  # name        = "rds-sg"
  # description = "Allow MySQL from EC2"
  # vpc_id      = aws_vpc.four-tier-arch-vpc.id
# 
  # ingress {
    # from_port       = 3306
    # to_port         = 3306
    # protocol        = "tcp"
    # security_groups = [aws_security_group.my-sg.id]
  # }
# 
  # egress {
    # from_port   = 0
    # to_port     = 0
    # protocol    = "-1"
    # cidr_blocks = ["0.0.0.0/0"]
    # security_groups = [aws_security_group.my-sg.id]
  # }
# 
  # tags = {
    # Name = "RDS-Security-Group"
  # }
# }
